correção do bug de não desvirar carta automaticamente, aplicação do cronômetro e fim de jogo, com opção de recomeçar.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Parrot Card Game</title>
 </head>
-<body onload="iniciarJogo()">
+<body onload="iniciarJogo()" >
     <div class="conteudo-pagina">
         <div class="nome-do-jogo"> <h1>PARROT CARD GAME</h1></div>
         <ul class="tabuleiro-cartas">
@@ -17,7 +17,10 @@
         
         </div>
 
-
+<div class="cronometro"> 
+    <div class="segundos"> 0 </div>
+    <div> segundos</div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
